# seed-library-data-experimental

./: .gitignore  README.md
data/: MSBP-Seed-data-template-and-glossary.xlsx  Notes  Notes.Kew  Notes.MARC21_bibliographic_field_list.txt  Notes.MARC_ChatGPT  Notes.biographic.txt  csv2MARC.py  csv2MARC_SACA13.py  export_SPF.csv  mappings_v0.1.csv  native_seedbank_2025_ex_20251016.csv  native_seedbank_2025_pseudo_marc.txt  pymarc_example.py  seed_SPF.csv  seed_packets_2025.csv  seed_packets_2025.mrc  seed_packets_2025_v2.list  seed_packets_2025_v2.mrc  species2MARC.py  tst2MARC.py
data/USDA_PLANTS_database/: Notes  parse_USDA.py
data/koha_framework_tools/: .dockerignore  .gitattributes  .gitignore  LICENSE  README.md  compose.yaml  dockerfile.celery  dockerfile.qq  dockerfile.www  makefile  pyproject.toml  requirements-dev.txt  requirements.txt
data/koha_framework_tools/db/: env.py
data/koha_framework_tools/docker/www/: prestart.sh
data/koha_framework_tools/docs/dev/: README.md  api.md  cli.md  database.md  settings.md
data/koha_framework_tools/koha_framework_tools/: celery.py
data/koha_framework_tools/koha_framework_tools/conf/: settings.py
data/koha_framework_tools/tests/: conftest.py
data/onrockgarden/: Notes  onrockgarden.csv  parse_onrockgarden.py
data/tomclothier_hort/tomclothier.hort.net/: index.html  page01.html  page02.html  page03.html  page04.html  page05.html  page06.html  page07.html  page08.html  page09.html  page10.html  page11.html  page12.html  page13.html  page14.html  page15.html  page16.html  page17.html  page18.html  page19.html  page20.html  page21.html  page22.html  page23.html  (+48 more)
(+242 files in other folders)
