[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=7.1"]

[project]
authors = [{"name" = "John (EBo) David"}]
description = "Koha Framework Tools"
dynamic = ["version"]
license = {"file" = "LICENSE"}
name = "koha_framework_tools"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
  "aiosqlite",
  "alembic",
  "asyncpg",
  "celery",
  "dogpile.cache",
  "fastapi",
  "psycopg2-binary",
  "pydantic~=2.0",
  "pydantic-settings",
  "QuasiQueue",
  "SQLAlchemy",
  "redis",
  "typer"
]

[project.optional-dependencies]
dev = [
  "build",
  "dapperdata",
  "glom",
  "mypy",
  "paracelsus",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-pretty",
  "ruamel.yaml",
  "ruff",
  "toml-sort",
  "uv"
]

[project.scripts]
koha_framework_tools = "koha_framework_tools.cli:app"

[tool.coverage.run]
omit = [
  "./koha_framework_tools/_version.py",
  "./koha_framework_tools/__init__.py",
  "./tests/*"
]
concurrency = ["thread", "greenlet"]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
exclude = [".venv", "./koha_framework_tools/_version.py"]
line-length = 120

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.package-data]
koha_framework_tools = ["py.typed"]

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"
write_to = "koha_framework_tools/_version.py"
